fix ilustration align

--- a/front/src/components/pages/homepage/main.styl
+++ b/front/src/components/pages/homepage/main.styl
@@ -43,6 +43,9 @@
     display: flex
     flex-flow: row nowrap
     align-items: flex-end
+  .skills
+    position: absolute
+    bottom: 0
 
 
 // svg styles
@@ -54,6 +57,9 @@
 .illustration
   display: flex
   flex-flow: row nowrap
+  flex: 1
+  align-items: center
+  padding-bottom: 20%
 
 .cls-wide
 .cls-line
@@ -158,3 +164,4 @@
   transform: rotate3d(1,0,0,30deg)
   background: url('./../../../assets/squad.png')
   opacity: .8
+  transition: 1s ease transform
